--- a/dom/index.html
+++ b/dom/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>hello mohan</h1>
+    <button onclick="btn">submit</button>
 </body>
 </html>
